--- a/src/views/user.ejs
+++ b/src/views/user.ejs
@@ -12,10 +12,15 @@
 </head>
 
 <body>
-  <div class="user-info-container">
-    <form method="POST" action="/users/create-user">
-      <div class="container">
-        <div class="row">
+  <div>
+
+
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="user-info-container">
+        <form method="POST" action="/users/create-user">
+
           <div class="mb-3 mt-3 col-6">
             <label for="username" class="form-label">User Name</label>
             <input type="text" class="form-control" id="username" name="username" required>
@@ -34,9 +39,47 @@
           <div class="col-12">
             <button type="submit" class="btn btn-primary">Submit</button>
           </div>
-        </div>
+
+        </form>
       </div>
-    </form>
+      <div class="table-title mt-2">
+        <h3>List of user</h3>
+      </div>
+      <div class="table-user">
+        <table class="table table-hover table-bordered border-light">
+          <thead>
+            <tr>
+              <th scope="col">ID</th>
+              <th scope="col">Email</th>
+              <th scope="col">Username</th>
+              <th scope="col">Action</th>
+
+            </tr>
+          </thead>
+          <tbody>
+            <% userList.forEach(function(item,index){ %>
+              <tr>
+                <th scope="row">
+                  <%=index + 1 %>
+                </th>
+                <td>
+                  <%=item.email %>
+                </td>
+                <td>
+                  <%=item.username %>
+                </td>
+                <td>
+                  <button class="btn btn-warning">Edit</button>
+                  <button class="btn btn-danger">Delete</button>
+                </td>
+
+              </tr>
+              <% }) %>
+
+          </tbody>
+        </table>
+      </div>
+    </div>
   </div>
 </body>
 
